--- a/Remage/Storyboards/NewReminder.storyboard
+++ b/Remage/Storyboards/NewReminder.storyboard
@@ -420,22 +420,22 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="829"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xDT-XF-xbP">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="829"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="839"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="8LM-9N-7ek">
-                                                <rect key="frame" x="20" y="20" width="374" height="644"/>
+                                                <rect key="frame" x="20" y="20" width="374" height="654"/>
                                                 <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add a Description to your Reminder" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xin-uA-StC">
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Write a Note" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xin-uA-StC">
                                                         <rect key="frame" x="0.0" y="0.0" width="374" height="24"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <view alpha="0.29999999999999999" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3ma-rj-0Xn">
-                                                        <rect key="frame" x="0.0" y="54" width="374" height="590"/>
+                                                        <rect key="frame" x="0.0" y="54" width="374" height="600"/>
                                                         <subviews>
                                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="aEo-ms-qQw">
-                                                                <rect key="frame" x="15" y="15" width="344" height="560"/>
+                                                                <rect key="frame" x="20" y="20" width="334" height="560"/>
                                                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="560" id="rkn-bU-iS2"/>
@@ -448,16 +448,16 @@
                                                         </subviews>
                                                         <color key="backgroundColor" systemColor="systemPurpleColor" red="0.68627450980000004" green="0.32156862749999998" blue="0.87058823529999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <constraints>
-                                                            <constraint firstItem="aEo-ms-qQw" firstAttribute="leading" secondItem="3ma-rj-0Xn" secondAttribute="leading" constant="15" id="3Yg-5y-1dx"/>
-                                                            <constraint firstAttribute="bottom" secondItem="aEo-ms-qQw" secondAttribute="bottom" constant="15" id="9aP-Tm-rUe"/>
-                                                            <constraint firstAttribute="trailing" secondItem="aEo-ms-qQw" secondAttribute="trailing" constant="15" id="RqB-Bq-cFC"/>
-                                                            <constraint firstItem="aEo-ms-qQw" firstAttribute="top" secondItem="3ma-rj-0Xn" secondAttribute="top" constant="15" id="cMc-7e-EX4"/>
+                                                            <constraint firstItem="aEo-ms-qQw" firstAttribute="leading" secondItem="3ma-rj-0Xn" secondAttribute="leading" constant="20" id="3Yg-5y-1dx"/>
+                                                            <constraint firstAttribute="bottom" secondItem="aEo-ms-qQw" secondAttribute="bottom" constant="20" id="9aP-Tm-rUe"/>
+                                                            <constraint firstAttribute="trailing" secondItem="aEo-ms-qQw" secondAttribute="trailing" constant="20" id="RqB-Bq-cFC"/>
+                                                            <constraint firstItem="aEo-ms-qQw" firstAttribute="top" secondItem="3ma-rj-0Xn" secondAttribute="top" constant="20" id="cMc-7e-EX4"/>
                                                         </constraints>
                                                     </view>
                                                 </subviews>
                                             </stackView>
                                             <view contentMode="scaleToFill" horizontalCompressionResistancePriority="751" translatesAutoresizingMaskIntoConstraints="NO" id="AtX-EY-iMt">
-                                                <rect key="frame" x="0.0" y="679" width="414" height="150"/>
+                                                <rect key="frame" x="0.0" y="689" width="414" height="150"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="150" id="bA5-eT-G7D"/>
