--- a/Remage/Storyboards/Settings.storyboard
+++ b/Remage/Storyboards/Settings.storyboard
@@ -12,37 +12,54 @@
             <objects>
                 <viewController id="eC1-XR-jEc" customClass="SettingsMenuViewController" customModule="Remage" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="9nn-wl-Dxw">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="1000"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ib0-D4-iI2">
-                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="829"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3as-jP-CyZ">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="725"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="829"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="o5T-Xx-NpJ">
-                                                <rect key="frame" x="0.0" y="605" width="414" height="120"/>
+                                                <rect key="frame" x="0.0" y="709" width="414" height="120"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="120" id="YPY-YK-7RJ"/>
                                                 </constraints>
                                             </view>
-                                            <view alpha="0.29999999999999999" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jJd-vo-PFT">
-                                                <rect key="frame" x="20" y="166" width="374" height="128"/>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jJd-vo-PFT">
+                                                <rect key="frame" x="20" y="20" width="374" height="80"/>
                                                 <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Background Color" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WVb-ZY-BYk">
-                                                        <rect key="frame" x="20" y="20" width="334" height="24"/>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                                        <nil key="textColor"/>
-                                                        <nil key="highlightedColor"/>
-                                                    </label>
+                                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="4Ds-zn-fY3">
+                                                        <rect key="frame" x="20" y="20" width="334" height="40"/>
+                                                        <subviews>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Background Color" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WVb-ZY-BYk">
+                                                                <rect key="frame" x="0.0" y="0.0" width="274" height="40"/>
+                                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2yf-mW-qc8">
+                                                                <rect key="frame" x="294" y="0.0" width="40" height="40"/>
+                                                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                <constraints>
+                                                                    <constraint firstAttribute="width" secondItem="2yf-mW-qc8" secondAttribute="height" multiplier="1:1" id="5rw-Vs-A1v"/>
+                                                                    <constraint firstAttribute="height" constant="40" id="Qwc-Te-AVs"/>
+                                                                </constraints>
+                                                                <connections>
+                                                                    <segue destination="Y9F-uV-y2y" kind="show" id="VMR-YQ-Aet"/>
+                                                                </connections>
+                                                            </button>
+                                                        </subviews>
+                                                    </stackView>
                                                 </subviews>
-                                                <color key="backgroundColor" systemColor="systemPurpleColor" red="0.68627450980000004" green="0.32156862749999998" blue="0.87058823529999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <color key="backgroundColor" red="0.68627450980000004" green="0.32156862749999998" blue="0.87058823529999996" alpha="0.27239404965753422" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
-                                                    <constraint firstItem="WVb-ZY-BYk" firstAttribute="leading" secondItem="jJd-vo-PFT" secondAttribute="leading" constant="20" id="7lh-r7-b2L"/>
-                                                    <constraint firstAttribute="trailing" secondItem="WVb-ZY-BYk" secondAttribute="trailing" constant="20" id="UKV-cV-kzs"/>
-                                                    <constraint firstItem="WVb-ZY-BYk" firstAttribute="top" secondItem="jJd-vo-PFT" secondAttribute="top" constant="20" id="qTk-oA-35v"/>
+                                                    <constraint firstItem="4Ds-zn-fY3" firstAttribute="leading" secondItem="jJd-vo-PFT" secondAttribute="leading" constant="20" id="5xo-wM-bTQ"/>
+                                                    <constraint firstAttribute="bottom" secondItem="4Ds-zn-fY3" secondAttribute="bottom" constant="20" id="7iS-m3-iM0"/>
+                                                    <constraint firstAttribute="trailing" secondItem="4Ds-zn-fY3" secondAttribute="trailing" constant="20" id="fmD-AQ-8Qd"/>
+                                                    <constraint firstItem="4Ds-zn-fY3" firstAttribute="top" secondItem="jJd-vo-PFT" secondAttribute="top" constant="20" id="uaJ-bR-Ilq"/>
                                                 </constraints>
                                             </view>
                                         </subviews>
@@ -53,6 +70,7 @@
                                             <constraint firstItem="jJd-vo-PFT" firstAttribute="leading" secondItem="3as-jP-CyZ" secondAttribute="leading" constant="20" id="Kfj-CZ-NzF"/>
                                             <constraint firstItem="jJd-vo-PFT" firstAttribute="top" secondItem="3as-jP-CyZ" secondAttribute="top" constant="20" id="b9d-6e-57C"/>
                                             <constraint firstAttribute="trailing" secondItem="jJd-vo-PFT" secondAttribute="trailing" constant="20" id="cRi-4W-w9q"/>
+                                            <constraint firstItem="o5T-Xx-NpJ" firstAttribute="top" secondItem="jJd-vo-PFT" secondAttribute="bottom" constant="609" id="kiO-cJ-5Tv"/>
                                             <constraint firstAttribute="bottom" secondItem="o5T-Xx-NpJ" secondAttribute="bottom" id="o0D-O3-coO"/>
                                         </constraints>
                                     </view>
@@ -79,14 +97,32 @@
                         <viewLayoutGuide key="safeArea" id="DWv-MR-T8a"/>
                     </view>
                     <navigationItem key="navigationItem" id="RPp-Kz-8L9"/>
+                    <size key="freeformSize" width="414" height="1000"/>
                     <connections>
                         <outlet property="backgroundCardView" destination="jJd-vo-PFT" id="NMw-dk-0vA"/>
+                        <outlet property="backgroundColorChoiceButton" destination="2yf-mW-qc8" id="8yY-LU-Ztl"/>
                         <outlet property="backgroundLabel" destination="WVb-ZY-BYk" id="87J-qU-K8z"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5zx-4O-xlj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1042.0289855072465" y="113.83928571428571"/>
+            <point key="canvasLocation" x="1094" y="148"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="kKM-04-hGI">
+            <objects>
+                <viewController id="Y9F-uV-y2y" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="5tB-TJ-MBG">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="Tsr-OZ-rlF"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="3tC-FP-XwV"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="grn-Li-XPy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2043" y="114"/>
         </scene>
         <!--Settings-->
         <scene sceneID="zvV-Ax-huS">
