--- a/Remage/Views/Settings SB/ColorCollectionViewCell.xib
+++ b/Remage/Views/Settings SB/ColorCollectionViewCell.xib
@@ -10,21 +10,60 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ColorCollectionViewCell" id="gTV-IL-0wX" customClass="ColorCollectionViewCell" customModule="Remage" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+            <rect key="frame" x="0.0" y="0.0" width="268" height="211"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                <rect key="frame" x="0.0" y="0.0" width="268" height="211"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mAn-RF-ESs">
-                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                        <rect key="frame" x="0.0" y="0.0" width="268" height="211"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vJc-Cs-X3O">
-                                <rect key="frame" x="0.0" y="0.0" width="50" height="26"/>
+                                <rect key="frame" x="0.0" y="0.0" width="268" height="187"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="UGf-OF-6hB">
+                                        <rect key="frame" x="0.0" y="0.0" width="268" height="187"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dWL-DK-FSV">
+                                                <rect key="frame" x="40.5" y="0.0" width="187" height="93.5"/>
+                                                <subviews>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Crp-Os-Jyf">
+                                                        <rect key="frame" x="0.0" y="0.0" width="93.5" height="93.5"/>
+                                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                    </view>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a8F-ap-6kk">
+                                                        <rect key="frame" x="93.5" y="0.0" width="93.5" height="93.5"/>
+                                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                    </view>
+                                                </subviews>
+                                            </stackView>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0wd-Ub-I5u">
+                                                <rect key="frame" x="87.5" y="93.5" width="93.5" height="93.5"/>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="0wd-Ub-I5u" secondAttribute="height" multiplier="1:1" id="CE6-n3-zzv"/>
+                                                </constraints>
+                                            </view>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="a8F-ap-6kk" firstAttribute="width" secondItem="0wd-Ub-I5u" secondAttribute="width" id="AW3-dg-9Tz"/>
+                                            <constraint firstItem="Crp-Os-Jyf" firstAttribute="width" secondItem="0wd-Ub-I5u" secondAttribute="width" id="Jwp-LS-gC1"/>
+                                            <constraint firstItem="a8F-ap-6kk" firstAttribute="height" secondItem="0wd-Ub-I5u" secondAttribute="height" id="Ocw-Ga-ESh"/>
+                                            <constraint firstItem="Crp-Os-Jyf" firstAttribute="height" secondItem="0wd-Ub-I5u" secondAttribute="height" id="eXj-aW-too"/>
+                                        </constraints>
+                                    </stackView>
+                                </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="UGf-OF-6hB" secondAttribute="bottom" id="44J-lT-mPg"/>
+                                    <constraint firstItem="UGf-OF-6hB" firstAttribute="top" secondItem="vJc-Cs-X3O" secondAttribute="top" id="MHb-rD-Zrt"/>
+                                    <constraint firstItem="UGf-OF-6hB" firstAttribute="leading" secondItem="vJc-Cs-X3O" secondAttribute="leading" id="g8x-WU-JAE"/>
+                                    <constraint firstAttribute="trailing" secondItem="UGf-OF-6hB" secondAttribute="trailing" id="xpl-0S-Wdj"/>
+                                </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Color Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VKM-mZ-Wia">
-                                <rect key="frame" x="0.0" y="26" width="50" height="24"/>
+                                <rect key="frame" x="0.0" y="187" width="268" height="24"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -50,11 +89,15 @@
                 <constraint firstItem="mAn-RF-ESs" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="bce-4l-Uku"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <size key="customSize" width="268" height="211"/>
             <connections>
-                <outlet property="circleView" destination="vJc-Cs-X3O" id="4ma-BQ-YZx"/>
+                <outlet property="bottomCircleView" destination="0wd-Ub-I5u" id="iTM-ko-xpw"/>
+                <outlet property="circlesView" destination="vJc-Cs-X3O" id="an4-BR-bDC"/>
+                <outlet property="leftCircleView" destination="Crp-Os-Jyf" id="DYQ-gj-dO3"/>
                 <outlet property="nameLabel" destination="VKM-mZ-Wia" id="Iq9-ha-dSL"/>
+                <outlet property="rightCircleView" destination="a8F-ap-6kk" id="1FB-AO-mxz"/>
             </connections>
-            <point key="canvasLocation" x="132" y="125"/>
+            <point key="canvasLocation" x="130.43478260869566" y="122.20982142857142"/>
         </collectionViewCell>
     </objects>
 </document>
